--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Scenes/Game.tscn"]
+open_scenes=["res://Scenes/Game.tscn", "res://Scenes/Man.tscn", "res://Scenes/Cat.tscn"]
 
 [ScriptEditor]
 
