--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ open_scenes=["res://Scenes/Game.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://README.md"]
+open_scripts=["res://Scripts/Cat.gd", "res://Scripts/Game.gd", "res://README.md"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
