--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -16,3 +16,7 @@ scenes=["res://Scenes/Game.tscn"]
 [script_setup]
 
 last_selected_language="GDScript"
+
+[dialog_bounds]
+
+project_settings=Rect2(237, 119, 900, 614)
