--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -19,4 +19,5 @@ last_selected_language="GDScript"
 
 [dialog_bounds]
 
-project_settings=Rect2(237, 119, 900, 614)
+project_settings=Rect2(241, 119, 900, 614)
+editor_settings=Rect2(235, 105, 900, 614)
