фиксаните переключение пж

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,11 +4,11 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_split_2=-52
+dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=170
-dock_hsplit_3=-270
+dock_hsplit_2=202
+dock_hsplit_3=-202
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,15 +16,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-<<<<<<< HEAD
-open_scenes=["res://Scenes/MainMenu.tscn"]
-=======
-open_scenes=["res://Scenes/Game.tscn", "res://Scenes/Man.tscn", "res://Scenes/Cat.tscn"]
->>>>>>> 5d72e2756eb922153b3d39128eda3f2a557a92e9
+<<<<<<<HEADopen_scenes=["res://Scenes/MainMenu.tscn"]
+open_scenes=["res://Scenes/Game.tscn", "res://Scenes/MainMenu.tscn", "res://Scenes/Man.tscn", "res://Scenes/Cat.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/BasePlayer.gd", "res://Scripts/Cat.gd", "res://Scripts/Game.gd", "res://Scripts/Man.gd", "res://README.md"]
+open_scripts=["res://Scripts/BasePlayer.gd", "res://Scripts/Cat.gd", "res://Scripts/Game.gd", "res://Scripts/GameManager.gd", "res://Scripts/Man.gd"]
 open_help=[]
-script_split_offset=70
+script_split_offset=52
 list_split_offset=0
