--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -19,9 +19,13 @@ last_selected_language="GDScript"
 
 [dialog_bounds]
 
-project_settings=Rect2(287, 149, 900, 614)
+project_settings=Rect2(297, 149, 900, 614)
 editor_settings=Rect2(237, 119, 900, 614)
 
 [scripts_panel]
 
 show_scripts_panel=true
+
+[project_settings]
+
+advanced_mode=false
