Вроде звук издаёт

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_2=246
+dock_hsplit_3=-314
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -20,7 +20,7 @@ open_scenes=["res://Scenes/Game.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Cat.gd", "res://Scripts/Game.gd", "res://README.md"]
+open_scripts=["res://Scripts/BasePlayer.gd", "res://Scripts/Cat.gd", "res://Scripts/Game.gd", "res://Scripts/Man.gd", "res://README.md"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
