--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,15 +16,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-<<<<<<< HEAD
+<<<<<<<HEADopen_scenes=["res://Scenes/MainMenu.tscn"]
 open_scenes=["res://Scenes/MainMenu.tscn"]
-=======
-open_scenes=["res://Scenes/Game.tscn", "res://Scenes/Man.tscn", "res://Scenes/Cat.tscn"]
->>>>>>> 5d72e2756eb922153b3d39128eda3f2a557a92e9
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/BasePlayer.gd", "res://Scripts/Cat.gd", "res://Scripts/Game.gd", "res://Scripts/Man.gd", "res://README.md"]
+open_scripts=["res://Scripts/BasePlayer.gd", "res://Scripts/Cat.gd", "res://Scripts/Game.gd", "res://Scripts/GameManager.gd", "res://Scripts/MainMenu.gd", "res://Scripts/Man.gd", "res://README.md"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
