--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Scenes/MainMenu.tscn"]
-open_scenes=["res://Scenes/MainMenu.tscn"]
+open_scenes=["res://Scenes/Game.tscn"]
 
 [ScriptEditor]
 
